# PumpkinSoup

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  player_util.rs  task_util.rs
src/commands/: damager_command.rs  mod.rs  soup_kit_command.rs  test_add_pdc_command.rs  test_pdc_command.rs
src/config/: damagers.rs  mod.rs
src/damager/: damager_state.rs  mod.rs
src/listeners/: mod.rs  soup_rightclick.rs
src/persitence/: namespaced_key.rs
src/util/: global.rs  mod.rs  task_util.rs
